<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_live"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
...
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:text="@string/button_period_selector"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonPeriodSelector" />

    <TextView
        android:layout_marginTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="left"
        android:id="@+id/main_other_functions"
...
