<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.hortensie.ai_trader.xAPI.MainActivity">

    <TextView
        android:paddingBottom="20dp"
        android:layout_gravity="center"
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_cplusplus"
        android:elevation="5dp"/>

    <Button
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:text="@string/button_loginToXApi"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/buttonXApi" />

    <Button
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:text="@string/button_historicalData"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:id="@+id/historicalData" />

</LinearLayout>
